# vies-vat-check

./: .gitignore  CHANGES.rst  Makefile  Pipfile  README.rst  pyproject.toml  setup.py
src/viesvatcheck/: client.py  exceptions.py
tests/: test_client.py  test_parse.py
viesvatcheck/: __init__.py  client.py  countries.py  exceptions.py  util.py
