[tool.poetry]
name = "viesvatcheck"
version = "0.4.0"
description = ""
authors = ["Mārtiņš Šulcs <shulcsm@gmail.com>"]
readme = "README.rst"
packages = [{include = "viesvatcheck", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8"
zeep = "^4.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ruff = "^0.0.254"
mypy = "^1.0.1"
types-pytz = "^2022.7.1.2"
types-requests = "^2.28.11.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 120