[project]
name = "viesvatcheck"
version = "0.5.0"
description = ""
authors = [{ name = "Mārtiņš Šulcs", email = "shulcsm@gmail.com" }]
license = "MIT"
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.6',
    'Topic :: Software Development :: Libraries :: Application Frameworks',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
requires-python = ">=3.9"
dependencies = [
    "isodate==0.6.1", # https://github.com/mvantellingen/python-zeep/issues/1444
    "zeep==4.3.1",
]

[dependency-groups]
dev = [
    "pytest==7.2.2",
    "ruff==0.0.254",
    "mypy==1.0.1",
    "types-pytz==2022.7.1.2",
    "types-requests==2.28.11.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viesvatcheck"]
